# Generative-AI-as-a-Task-Shock

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-r.txt  requirements.txt
analysis/: did_main.R  did_v3.R  wcb_rubric.R
config/: ai_mention_lexicon.yaml  anchor_firms.yaml  extended_universe_tickers.yaml  shock_dates.yaml  universe_filters.yaml  universe_tickers.yaml
docs/: PHASE4_METHODOLOGY_v3.md  phase6_notes.md
notebooks/: thesis_notebook.ipynb
prompts/: demand_delta_system.txt  demand_friction_system.txt  literature_rubric_system.txt  llm_judge_system.txt  supply_rho_system.txt
prompts/_experimental/: supply_rho_compact.txt
scripts/: 01_build_firm_universe.py  02_collect_10k_text.py  03_build_financial_panel.py  04_build_rpo_quarterly.py  05_build_billings_panel.py  06_build_margin_panel.py  07_build_ai_mention_panel.py  08_score_supply_rho.py  _experimental_08_score_compact.py  build_eloundou_corpus.py  build_financial_panel.py  build_firm_universe.py  build_master_panel.py  collect_10k_text.py  score_literature_rubric.py
scripts/_archive/: README.md  build_financial_panel.py  build_rpo_quarterly.py  score_demand_friction.py
scripts/utils/: __init__.py  edgar.py  icc.py  llm_client.py  logging_setup.py  schemas.py  task_matching.py  text_sections.py  xbrl.py
